--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,6 @@
 *.xml linguist-vendored
 *.xslt linguist-vendored
 *.css linguist-vendored
+project/ linguist-vendored
+target/ linguist-vendored
+idea/  linguist-vendored
